2004-10-17  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* libunimod/mloader.c (SL_LoadSamples):
	  too many arguments to function `FreeSampleList'
	* timidity/common.c, timidiyt/timidiyt.c: avoid confliction of
	  time.h and sys/time.h
	* timidity/aq.c: fix wrong prototype (int -> void)
	* timidity/wrd_read.c: #ifdef-out unknown pragma
	* configure.in, timidity/timidity.c : no need of <stdbool.h>
	* timidity/Makefile.am : bug fix

2004-10-14  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* interface/w32g_i.c (MPanelMessageHaveMesssage): fix typo
	* autoconf/alsa.m4, autoconf/ao.m4, autoconf/arts.m4,
	  autoconf/esd.m4, autoconf/gtk-2.0.m4, autoconf/gtk.m4,
	  autoconf/libFLAC.m4, autoconf/libOggFLAC.m4, autoconf/ogg.m4,
	  autoconf/utils.m4, autoconf/vorbis.m4: Fixes for the
	  underquoting problems in the M4 macros.

2004-10-09  Kentaro Sato <kentaro@ranvis.com>

	* interface/mac_c.c, interface/wrdt_mac.c, timidity/wrd.h,
	  utils/support.c: Fixes to compile on Mac OS.

2004-10-03  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* NEWS: Add new entry for 2.13.2
	* configure.in: Change version to 2.13.2

2004-10-02  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* interface/wrdt_wcon.c : Fix double definition of print_ecmd()
	* timidity/timidity.c (main): s/strcat/strncat/;

2004-09-29  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* NEWS: Add new entry for 2.13.1

2004-09-28  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* configure.in: Change version to 2.13.1

2004-09-27  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* utils/support.c (vsnprintf): ensure snpritnf() to return a
	  \0-terminated string

	* interface/mac_c.c, interface/server_c.c, interface/w32g_c.c,
	  interface/w32g_i.c, interface/wrdt_dumb.c, interface/wrdt_mac.c,
	  interface/wrdt_tty.c, interface/wrdt_w32g.c, interface/xaw_i.c,
	  interface/xskin_i.c, libarc/arc.c, timidity/audriv_al.c,
	  timidity/audriv_mme.c, timidity/common.c, timidity/mac_qt_a.c,
	  timidity/sun_a.c, timidity/timidity.c, timidity/wrdt_read.c: